--- a/SD_WAN_API/ansible.yml
+++ b/SD_WAN_API/ansible.yml
@@ -1,12 +1,12 @@
 ---
-    -name: cau hinh switch_1
-        hosts: sw_HCM
-        gather_facts: False
-    -tasks:
+    - name: cau hinh switch_1
+      hosts: sw_HCM
+      gather_facts: False
+      tasks:
         - name: show ip
-        ios_command:
+          ios_command:
             Commands:
-                - sh vlan br
-        register: Output
+              - sh vlan br
+          register: Output
 
-        -debug:var=Output.stdout_lines
+        - debug: var=Output.stdout_lines
